# panoptes

./: .env.example  .gitignore  CONTRIBUTING.md  METHODS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  nightly.yml
examples/: custom_judge.py  custom_provider.py
prompts/: rubric_code_v1.md  rubric_factuality_v1.md  rubric_freeform_v1.md  rubric_math_v1.md
scripts/: calibration_probe.py  export_for_web.py  progress.py  show_live_run.py
src/panoptes/: __init__.py  cli.py  config.py  errors.py  pipeline.py  reporting.py  schemas.py
src/panoptes/benchmarks/: __init__.py  calibration_probe.py  gsm8k.py  humaneval.py  loader.py  mbpp.py  mtbench.py  truthfulqa.py
src/panoptes/clients/: __init__.py  _mock.py  _structured.py  anthropic.py  base.py  google.py  openai.py  openai_compat.py
src/panoptes/dashboard/: __init__.py  app.py
src/panoptes/judges/: __init__.py  base.py  rubric.py
src/panoptes/routing/: __init__.py  bandit.py  base.py  strategies.py
src/panoptes/sandbox/: __init__.py  python_exec.py
src/panoptes/stats/: __init__.py  bootstrap.py  compare.py  coverage_tests.py  pareto.py  reliability.py
src/panoptes/storage/: __init__.py  duckdb_store.py  prompt_cache.py
src/panoptes/uq/: __init__.py  conformal_adaptive.py  conformal_mondrian.py  conformal_split.py  decomposition.py  disagreement.py  self_consistency.py  semantic_entropy.py
src/panoptes/uq/nli/: __init__.py  (+3 more)
tests/integration/: test_pipeline_mocked.py
tests/property/: test_conformal_monotonicity.py  test_uq_invariants.py
tests/unit/: test_benchmarks.py  test_reporting.py  test_routing.py  test_sandbox.py  test_schemas.py
tests/unit/clients/: test_anthropic.py  test_google.py  test_openai.py  test_openai_compat.py
tests/unit/stats/: test_compare_pareto_bootstrap.py  test_coverage_tests.py  test_reliability.py
tests/unit/uq/: test_conformal_adaptive.py  test_conformal_mondrian.py  test_conformal_split.py  test_decomposition.py  test_disagreement.py  test_nli_llm.py  test_self_consistency.py  test_semantic_entropy.py
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/background/: page.tsx
web/app/calibration/: page.tsx
web/app/judges/: page.tsx
web/app/methods/: page.tsx
web/app/summary/: page.tsx
web/components/: BeforeAfter.tsx  Card.tsx  CodeBlock.tsx  CorrelationHeatmap.tsx  CostDonut.tsx  JudgeBadge.tsx  JudgeNoiseChart.tsx  JudgeScatter.tsx  MethodStack.tsx  Motion.tsx  Nav.tsx  ParetoChart.tsx  PipelineDiagram.tsx  ReliabilityDiagram.tsx  RoadmapItem.tsx  SamplingDistribution.tsx  ScoreHistogram.tsx  StrategyTradeoff.tsx  UQPanel.tsx  UncertaintyQuadrant.tsx
web/lib/: chart.ts  data.ts  format.ts  types.ts
web/public/data/: calibration.json  items.json  judge-pairs-panoptes-44c4e9b3.json  judge-pairs-panoptes-49fdaed9.json  judge-pairs-panoptes-696da4d5.json  judge-pairs-panoptes-d636a93f.json  judge-pairs-panoptes-e86ef9e3.json  pareto-panoptes-44c4e9b3.json  pareto-panoptes-49fdaed9.json  pareto-panoptes-696da4d5.json  pareto-panoptes-d636a93f.json  pareto-panoptes-e86ef9e3.json  rows-panoptes-44c4e9b3.json  rows-panoptes-49fdaed9.json  rows-panoptes-696da4d5.json  rows-panoptes-d636a93f.json  rows-panoptes-d7da27b1.json  rows-panoptes-e86ef9e3.json  runs.json  summary.json  uq-panoptes-49fdaed9.json  uq-panoptes-696da4d5.json  uq-panoptes-d636a93f.json  uq-panoptes-e86ef9e3.json
(+1 files in other folders)
