[project]
name = "panoptes"
version = "0.1.0a0"
description = "Uncertainty-aware LLM evaluation: calibrated posteriors, aleatoric/epistemic decomposition, conformal prediction."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Tony Wang" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.7",
    "httpx>=0.27",
    "anyio>=4.4",
    "duckdb>=1.0",
    "typer>=0.12",
    "rich>=13.7",
    "numpy>=1.26",
    "scipy>=1.13",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pyright>=1.1.370",
    "ruff>=0.6",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "hypothesis>=6.108",
    "respx>=0.21",
]
viz = [
    "streamlit>=1.36",
    "altair>=5.3",
    "plotly>=5.22",
]
providers-openai = ["openai>=1.40"]
providers-google = ["google-genai>=0.3"]
providers-hf = [
    "transformers>=4.43",
    "torch>=2.3",
]
bench = [
    "datasets>=2.20",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.5",
    "statsmodels>=0.14",
]

[project.scripts]
panoptes = "panoptes.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/panoptes"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle, pyflakes
    "I",                # isort
    "B",                # bugbear
    "UP",               # pyupgrade
    "ASYNC",            # async correctness
    "PIE", "PT",        # misc + pytest
    "RET", "SIM",       # returns, simplify
    "PL",               # pylint
    "RUF",              # ruff-specific
]
ignore = [
    "PLR0913",  # too many arguments — acceptable for research APIs with many statistical knobs
    "PLR2004",  # magic value comparison — common in stats code (alpha=0.05 etc.)
    "PLR0911",  # too many returns
    "PLR0912",  # too many branches
    "PLR0915",  # too many statements
    "E501",     # line too long — formatter handles this
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = "warning"
reportUnknownMemberType = "warning"
reportUnknownVariableType = "warning"
reportUnknownArgumentType = "warning"
reportUnknownParameterType = "warning"
reportUnknownLambdaType = "warning"
reportPrivateUsage = "warning"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "real_provider: tests that hit a real LLM provider (require API keys)",
]

[tool.coverage.run]
source = ["src/panoptes"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",  # ellipsis in Protocol bodies
]
